Replace get(0) with getFirst()